--- a/src-docs/templates/footer.njk
+++ b/src-docs/templates/footer.njk
@@ -1,5 +1,5 @@
         <!-- Footer-->
-        <footer class="py-5 bg-light">
+        <footer class="py-5">
             <blockquote  class="center-block">
              <div class="fw-bold">"The power of the Web is in its universality. Access by everyone regardless of disability is an essential aspect."</div>
              <div class="fst-italic">Tim Berners-Lee, W3C Founding Director and inventor of the World Wide Web, 2009</div>
