--- a/src-docs/templates/header.njk
+++ b/src-docs/templates/header.njk
@@ -1,5 +1,5 @@
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light"
+        <nav class="navbar navbar-expand-lg navbar-light"
              aria-label="Primary"
              id="mainNav">
             <div class="container px-4">
