--- a/src-docs/templates/owa.scss
+++ b/src-docs/templates/owa.scss
@@ -20,6 +20,9 @@ $backgroundColorDark: #000;
 $textColor: #000;
 $textColorDark: #eee;
 
+$headingColor: hsl(216, 60%, 36%);
+$headingColorDark:  hsl(216, 60%, 64%);
+
 :root {
   color-scheme: light dark;
 }
@@ -32,7 +35,7 @@ th {
 }
 
 h1,h2, h3, h4, h5, h6 {
-  color: light-dark($contentBlue, $contentBlueDark) !important;
+  color: light-dark($headingColor, $headingColorDark) !important;
 }
 
 p, ul, ol, li, th, td, blockquote, div {
