--- a/src-docs/templates/content-workshops.njk
+++ b/src-docs/templates/content-workshops.njk
@@ -26,7 +26,8 @@
             <ul>
               <li>The Experience of Disability (1/2 day)</li>
               <li>Introduction to ARIA Authoring Practices and Accessible Design (1/2 day)</li>
-              <li><a href="sessions/">Session details</a></li>
+              <li><a href="sessions/">Workshops</a></li>
+              <li><a href="presentations/">Presentations</a></li>
             </ul>
 
             <h2>Costs</h2>
